tests/snapshots/run_wpt_conformance__trtx_where_float16_3D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "where.https.any.js",
    "where float16 3D tensors",
    "trtx",
    "PASS",
)
