tests/snapshots/run_wpt_conformance__trtx_where_float16_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "where.https.any.js",
    "where float16 4D tensors",
    "trtx",
    Failed {
        msg: Some(
            "Failed to write tensor: DriverError(CUDA_ERROR_INVALID_VALUE, \"invalid argument\")",
        ),
    },
)
